--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,23 @@
-.background {
-  background-color: #222;
+header {
+  margin-bottom: 1rem;
+}
+
+h1, h2,
+h3, h4, 
+h5, h6 {
+  margin: 1rem 1rem 0rem;
+}
+
+p, label {
+  margin: 1rem;
+}
+
+.App {  
   min-height: 100vh;
+  background-color: #222;
+}
+
+.background {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,6 +27,17 @@
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.square-container {
+  display: flex;
+  align-items: center;
+}
+
+.square {
+  height: 10px;
+  width: 10px;
+  border: 1px solid white;
 }
 
 #playArea {
