--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,27 @@ p, label {
   margin: 1rem;
 }
 
+button {
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+  box-shadow: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin: 5px 3px;
+  display: inline-block; 
+}
+
 .App {  
   min-height: 100vh;
   background-color: #222;
 }
 
-.background {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.25rem;
   color: white;
 }
 
@@ -40,9 +51,14 @@ p, label {
   border: 1px solid white;
 }
 
-#playArea {
+main {
   display: flex;
   flex-direction: column;
+}
+
+#playArea div {
+  margin: 5px;
+  width: 300px;
 }
 
 #travelCtrl {
@@ -52,8 +68,10 @@ p, label {
 @media all and (min-width: 800px) {
   #playArea {
     flex-direction: row;
+    justify-content: center;
   }
   #playArea div {
-    margin: 0 2rem;
+    margin: 5px;
+    width: 300px;
   }
 }
